# piki

./: .prettierignore  README.md  SETUP.md  capture.py  detect.py  detect2.py  move.py  pyproject.toml  run.sh  web.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: main.ts
frontend/src/components/: HelloWorld.vue  TheWelcome.vue
frontend/src/views/: HomeView.vue
src/: db.sqlite3  manage.py
src/core/: api.py  apps.py  urls.py  utils.py  views.py
src/core/management/commands/: detect.py  monitor.py
src/core/migrations/: 0001_initial.py
src/core/templates/core/: base.html  config.html  index.html
src/core/utils/: __init__.py  ai.py  engine.py  func.py  helpers.py  interfaces.py  metrics.py  settings.py  shared.py  stream.py  workers.py
src/piki/: asgi.py  settings.py  urls.py  websocket.py  wsgi.py
templates/: index.html
