[project]
name = "pi-ki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django==5.2.4",
    "flask==3.1.1",
    "gpiozero==2.0.1",
    "numpy==2.3.2",
    "opencv-contrib-python-headless==4.11.0.86",
    "pigpio==1.78",
    "rich==14.1.0",
    "rknn-toolkit-lite2==2.3.2 ; platform_machine == 'aarch64'",
]

[dependency-groups]
dev = [
    "ruff==0.12.10",
    "ty==0.0.1a19",
]
model-conversion = []

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["I"]