[project]
name = "pi-ki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "channels==4.3.1",
    "daphne==4.2.1",
    "django==5.2.4",
    "django-ninja>=1.4.3",
    "flask==3.1.1",
    "gpiozero==2.0.1",
    "numpy==2.3.2",
    "opencv-contrib-python-headless==4.11.0.86",
    "pigpio==1.78",
    "rich==14.1.0",
    "rknn-toolkit-lite2==2.3.2 ; platform_machine == 'aarch64'",
    "uvicorn==0.35.0",
]

[dependency-groups]
dev = [
    "ruff==0.12.10",
    "ty==0.0.1a19",
]
model-conversion = []

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["I"]
